--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +21,12 @@
 
         </activity>
 
-        <activity android:name=".ui.RecipeSteps">
-            
+        <activity android:name=".ui.activities.PlayerActivity">
+
+        </activity>
+
+        <activity android:name=".ui.activities.StepActivity">
+
         </activity>
     </application>
 
