--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,16 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+ implementation 'com.android.support:support-annotations:27.1.1'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+
+        androidTestImplementation 'com.android.support.test:rules:1.0.2'
+        androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    }
 }
